--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -44,5 +44,24 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <session-config>
+        <session-timeout>
+            30
+        </session-timeout>
+        <cookie-config>
+            <name>
+                cooperate_session
+            </name>
+            <http-only>
+                true
+            </http-only>
+            <secure>
+                true
+            </secure>
+        </cookie-config>
+        <tracking-mode>
+            COOKIE
+        </tracking-mode>
+    </session-config>
 
 </web-app>
