permission filter implemented

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -13,11 +13,20 @@
     </servlet-mapping>
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>WEB-INF/spring-servlet.xml</param-value>
+        <param-value>
+            WEB-INF/spring-servlet.xml
+            WEB-INF/spring-security.xml
+        </param-value>
     </context-param>
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+    <listener>
+        <listener-class>
+            org.springframework.security.web.session.HttpSessionEventPublisher
+        </listener-class>
+    </listener>
+
     <filter>
         <filter-name>CharacterEncodingFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -39,8 +48,17 @@
         <filter-name>sitemesh</filter-name>
         <filter-class>com.opensymphony.sitemesh.webapp.SiteMeshFilter</filter-class>
     </filter>
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+
     <filter-mapping>
         <filter-name>sitemesh</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
@@ -52,16 +70,7 @@
             <name>
                 cooperate_session
             </name>
-            <http-only>
-                true
-            </http-only>
-            <secure>
-                true
-            </secure>
         </cookie-config>
-        <tracking-mode>
-            COOKIE
-        </tracking-mode>
     </session-config>
 
 </web-app>
