--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,11 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>aopalliance</groupId>
+            <artifactId>aopalliance</artifactId>
+            <version>1.0</version>
+        </dependency>
 
     </dependencies>
 
